<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/main"
        android:textSize="25sp" />
    <Button
        android:id="@+id/btnNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/number_mode"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/math_mode"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMath"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/high_scores"
        android:textSize="25sp" />
<!--
    <Button
        android:id="@+id/btnBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/bluetoothButtonLabel"
        android:textSize="25sp" />
!-->

</RelativeLayout>
