<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <Button
                android:id="@+id/resume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/resume" />
            <Button
                android:id="@+id/nextRound"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_round" />
            <Button
                android:id="@+id/exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
