<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/player_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Player_name" />

            <TextView
                android:id="@+id/player_score"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <ScrollView
                android:id="@+id/validSubmissionScrollWindow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/validSubmissionHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <Button
                android:id="@+id/exit1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
